Fix button label
Code gaat uit van "Rol dobbelstenen"

--- a/AfrikaansDobbelen/index.html
+++ b/AfrikaansDobbelen/index.html
@@ -23,7 +23,7 @@
   </p>
 
   <p>
-    <input type="button" id="play" value="Rol de dobbelstenen" />
+    <input type="button" id="play" value="Rol dobbelstenen" />
     <button id="scorebord">Scorebord</button>
   </p>
 
